# freelander

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  eventdialog.cpp  eventdialog.h  freelander.pro  googleclient.cpp  googleclient.h  main.cpp  mainwidget.cpp  mainwidget.h  tokenmanager.cpp  tokenmanager.h  utils.h
icons/: emoji.txt
resource/: calendar.qrc  calendar.rc
src/: calendardelegate.cpp  calendardelegate.h  calendartabledelegate.cpp  calendartabledelegate.h  clickabletextedit.cpp  clickabletextedit.h  eventdialog.cpp  eventdialog.h  eventdialog.ui  freelandercalendar.cpp  freelandercalendar.h  googleclient.cpp  googleclient.h  logger.cpp  logger.h  main.cpp  mainwidget.cpp  mainwidget.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  tokenmanager.cpp  tokenmanager.h  utils.cpp  utils.h
src/forms/: settingsdialog.ui
